@startuml
class GameManager {
    - speedIncreasePerPoint : float = 0.1f
    - _score : int
    - Awake() : void
    - Start() : void
    - WaitForFirebaseGroupAssignment() : System.Collections.IEnumerator
    - SetGameMode(group:ParticipantGroup) : void
    + IncrementScore() : void
    - UpdateScoreDisplay() : void
}
enum ParticipantGroup {
    NoOverride= 0,
    TestGroup1Text= 1,
    TestGroup2Arrows= 2,
    ControlGroupBlank= 3,
}
MonoBehaviour <|-- GameManager
GameManager --> "Instance" GameManager
GameManager o-> "gameModeOverride" ParticipantGroup
GameManager --> "CurrentGameMode" ParticipantGroup
GameManager --> "scoreText" Text
GameManager --> "crunchSound" AudioClip
GameManager --> "playerController" ToadController
GameManager +-- ParticipantGroup
@enduml
